--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ li a:hover {
 </head>
 <body>
   <ul>
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a class="active" href="arpanet.html">Arpanet</a></li>
+  <li><a href="fpt.html">FTP</a></li>
+  <li><a href="telnet.html">Telnet</a></li>
+  <li><a href="smtp.html">SMTP</a></li>
 </ul>
 
          <h1> Arpanet </h1>
