--- a/telnet.html
+++ b/telnet.html
@@ -1,1 +1,49 @@
 
+
+
+
+<!DOCTYPE html>
+
+<html>
+
+<head>
+<style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+</style>
+<link href="styles/style.css" rel="stylesheet">
+         
+<meta charset= "urf-8" >
+<title> Historia </title>
+</head>
+<body>
+  <ul>
+  <li><a class="active" href="arpanet.html">Arpanet</a></li>
+  <li><a href="fpt.html">FTP</a></li>
+  <li><a href="telnet.html">Telnet</a></li>
+  <li><a href="smtp.html">SMTP</a></li>
+</ul>
+
+</body>
+</html>
