--- a/arpanet.html
+++ b/arpanet.html
@@ -39,7 +39,7 @@ li a:hover {
 <body>
   <ul>
   <li><a class="active" href="arpanet.html">Arpanet</a></li>
-  <li><a href="fpt.html">FTP</a></li>
+  <li><a href="ftp.html">FTP</a></li>
   <li><a href="telnet.html">Telnet</a></li>
   <li><a href="smtp.html">SMTP</a></li>
 </ul>
