--- a/smtp.html
+++ b/smtp.html
@@ -1,7 +1,6 @@
 
 
 
-
 <!DOCTYPE html>
 
 <html>
@@ -40,7 +39,7 @@ li a:hover {
 <body>
   <ul>
   <li><a class="active" href="arpanet.html">Arpanet</a></li>
-  <li><a href="fpt.html">FTP</a></li>
+  <li><a href="ftp.html">FTP</a></li>
   <li><a href="telnet.html">Telnet</a></li>
   <li><a href="smtp.html">SMTP</a></li>
 </ul>
