--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@ li a:hover {
 <body>
   <ul>
   <li><a class="active" href="arpanet.html">Arpanet</a></li>
-  <li><a href="ftp.html">FTP</a></li>
+  <li><a href="fpt.html">FTP</a></li>
   <li><a href="telnet.html">Telnet</a></li>
   <li><a href="smtp.html">SMTP</a></li>
+  <li><a href="html.html">HTML</a></li>
+  <li><a href="http.html">HTTP</a></li>
+  <li><a href="webb.html">Webbläsare</a></li>
+  <li><a href="css.html">CSS</a></li>
+  <li><a href="xml.html">XML</a></li>
 </ul>
 
          <h1> Arpanet </h1>
