--- a/telnet.html
+++ b/telnet.html
@@ -42,6 +42,11 @@ li a:hover {
   <li><a href="ftp.html">FTP</a></li>
   <li><a href="telnet.html">Telnet</a></li>
   <li><a href="smtp.html">SMTP</a></li>
+  <li><a href="html.html">HTML</a></li>
+  <li><a href="http.html">HTTP</a></li>
+  <li><a href="webb.html">Webbläsare</a></li>
+  <li><a href="css.html">CSS</a></li>
+  <li><a href="xml.html">XML</a></li>
 </ul>
 
 </body>
