--- a/arpanet.html
+++ b/arpanet.html
@@ -48,6 +48,7 @@ li a:hover {
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
 </ul>
+  <center> <h1> Här du kan hitta information om Arpanet, FTP, Telnet, SMTP, HTML, HTTP, Webbläsare, CSS och XML </h1> </center>
 
 </body>
 </html>
