--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ li a:hover {
 </head>
 <body>
   <ul>
-  <li><a href="Index.html">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a class="active" href="arpanet.html">Arpanet</a></li>
   <li><a href="fpt.html">FTP</a></li>
   <li><a href="telnet.html">Telnet</a></li>
