--- a/arpanet.html
+++ b/arpanet.html
@@ -48,6 +48,7 @@ li a:hover {
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
 </ul>
-
+  <center> <h2> ARPANET </h2> </center>
+   <center> <p> ARPANET som står för Advanced Research Projects Agency Network </p> </center>
 </body>
 </html>
