--- a/arpanet.html
+++ b/arpanet.html
@@ -49,6 +49,8 @@ li a:hover {
   <li><a href="xml.html">XML</a></li>
 </ul>
   <center> <h2> ARPANET </h2> </center>
-   <center> <p> ARPANET som står för Advanced Research Projects Agency Network </p> </center>
+   <center> <p> ARPANET som står för Advanced Research Projects Agency Network. ARPANET blev etablerad 1969 i Amerika vilket var exakt 50 år sen.
+     Det var det första nätverket som implementerade TCP / IP-protokollsviten. Båda teknologierna blev den tekniska grunden för Internet. 
+     ARPANET grundades ursprungligen av Advanced Research Projects Agency (ARPA) från USA: s försvarsdepartement.</p> </center>
 </body>
 </html>
