--- a/arpanet.html
+++ b/arpanet.html
@@ -38,8 +38,9 @@ li a:hover {
 </head>
 <body>
   <ul>
-  <li><a class="active" href="arpanet.html">Arpanet</a></li>
-  <li><a href="ftp.html">FTP</a></li>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="arpanet.html">Arpanet</a></li>
+  <li><a href="fpt.html">FTP</a></li>
   <li><a href="telnet.html">Telnet</a></li>
   <li><a href="smtp.html">SMTP</a></li>
   <li><a href="html.html">HTML</a></li>
