--- a/css.html
+++ b/css.html
@@ -41,7 +41,7 @@ li a:hover {
   <ul>
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="arpanet.html">Arpanet</a></li>
-  <li><a href="fpt.html">FTP</a></li>
+  <li><a href="ftp.html">FTP</a></li>
   <li><a href="telnet.html">Telnet</a></li>
   <li><a href="smtp.html">SMTP</a></li>
   <li><a href="html.html">HTML</a></li>
