--- a/arpanet.html
+++ b/arpanet.html
@@ -52,6 +52,9 @@ li a:hover {
   <center> <h2> ARPANET </h2> </center>
    <center> <p> ARPANET som står för Advanced Research Projects Agency Network. ARPANET blev etablerad 1969 i Amerika vilket var exakt 50 år sen.
      Det var det första nätverket som implementerade TCP / IP-protokollsviten. Båda teknologierna blev den tekniska grunden för Internet. 
-     ARPANET grundades ursprungligen av Advanced Research Projects Agency (ARPA) från USA: s försvarsdepartement.</p> </center>
+     ARPANET grundades ursprungligen av Advanced Research Projects Agency (ARPA) från USA: s försvarsdepartement. 
+     Den paketväxlingsmetodik som användes i ARPANET baserades på koncept och design av Paul Baran, Donald Davies, Leonard Kleinrock och Lawrence Roberts. 
+     ARPANET använde ursprungligen Network Control Program. Senare utvecklade TCP / IP-kommunikationsprotokollen av Robert Kahn och Vint Cerf och införlivade 
+     koncept från det franska CYCLADES-projektregissör av Louis Pouzin; ARPANET bytte till TCP / IP 1983.</p> </center>
 </body>
 </html>
