--- a/ftp.html
+++ b/ftp.html
@@ -49,6 +49,7 @@ li a:hover {
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
 </ul>
+  <center> <h2> FTP </h2> </center>
 
 </body>
 </html>
