--- a/ftp.html
+++ b/ftp.html
@@ -50,6 +50,12 @@ li a:hover {
   <li><a href="xml.html">XML</a></li>
 </ul>
   <center> <h2> FTP </h2> </center>
+  <center> <p> Den originala FTP var skriven av Abhay Bhushan och publicerades som RFC 114 den 16 april 1971. Fram till 1980 körde FTP på NCP, föregångaren till TCP/IP. Protokollet ersattes senare av en TCP/IP-version, RFC 765 (Juni 1980) och RFC 959 (Oktober 1985), den aktuella specifikationen.
+    File Transfer Protocol används för överföring av datafiler mellan en klient och serer i ett datornätverk. Vad FTP gör är att den bygger en klient-servermodellarkitektur som har seperata kontroll och dataförbindelser mellan klienterna och servern. 
+    De som använder FPT kan autentisera sog med ett inloggningsprotokoll vilket är för klartext som är i form av ett användarnamn oh lösenord, med det kan också ansluta anonymt om servern är gjord så för att tillåta det. 
+    För att det ska va säker för överföring måste man skydda användernamn och lösenord med krypterat innehåll så är FTP ofta säkrat med SSL/TSL (FTPS) elller ersatt med SSH FTP (SFTP). 
+    De första FTP klientapplikationerna hette komandoradsprogram och de utvecklades innan operivsystemet hade grafiska användargränssnitt och de fortfarande medföljer med de flesta operativsystem som Windows, Unix och Linux. 
+    Sedan många FTP klienter har utvecklats för stationära datorer, servrar, mobiler och hårdvaror. FTP har också integrerats i produktivitetsapplikationer som HTML.</p> </center>
 
 </body>
 </html>
