--- a/telnet.html
+++ b/telnet.html
@@ -49,6 +49,11 @@ li a:hover {
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
 </ul>
+  <center> <h2> Telnet </h2> </center>
+  <center> <p> Telnet är ett applikationsprotokoll som används på internet eller kolakt nätverk. Den är använd för att tillhandahålla en dubbeöriktad interaktiv terminalanslutning. Användardata är isär ett band med Telnet kontrollinformation i en 8 bitars orienterad dataförbindelse över TCP.
+    Telnet var utvecklad 1969 med början med RFC 15, utökat till RFC 855 och standardiserade som Internet Engineering Tast Force (IETF). Internet Standard STD 8 det var en av de första internetstandarderna, namnet står för (teletypnätverk).
+    Historiskt sett gav Telnet åtkomst till ett kommandoradsgränssnitt på en fjärrvärd. På grund av allvarliga säkerhetsproblem när man använder Telnet över ett öppet nätverk som Internet har användningen för detta ändamål avsevärt minskat till förmån för SSH.
+    Termen telnet används också för att referera till programvaran som implementerar klientdelen av protokollet. Telnet klientapplikationer är tillgängliga för praktiskt taget alla datorplattformar. Telnet används också som ett verb. </p> </center>
 
 </body>
 </html>
