--- a/smtp.html
+++ b/smtp.html
@@ -49,6 +49,10 @@ li a:hover {
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
 </ul>
+  <center> <h2> SMTP </h2> </center>
+  <center> <p> SMTP som är färkortat från Simple Mail Transfer Protocol är ett kommunikationsprotokoll för överföring av elektronisk post. SMTP definerades som Internet standatd först i 1982 av RFC 821 och uppdaterades år 2008 av RFC 5321 till utökade SMTP tillägg, vilket är protokollsorten i utbredd användning idag.
+    Mailservrar och andra meddelandenöverföringsagenter använder SMTP för att skicka och ta emot e-postmeddelanden. Egna system som Microsoft Exchange och IBM Notes och webmailsystem som Outlook.com, Gmail och Yahoo! Mail kan använda icke-standardprotokoll internt, men alla använder SMTP när de skickas till eller tar emot e-post från sina egna system.
+    E-postklienter på användarnivå använder vanligtvis endast SMTP för att skicka meddelanden till en e-postserver för vidarebefordran, och skickar vanligtvis utgående e-post till e-postservern i port 587 eller 465 enligt RFC 8314. För att hämta meddelanden är IMAP och POP3 standard, men äganderätt servrar implementerar ofta proprietära protokoll. </p> </center>
 
 </body>
 </html>
