--- a/html.html
+++ b/html.html
@@ -52,8 +52,7 @@ li a:hover {
   <center> <h2> HTML </h2> </center>
   <center> <p> Hypertext Markup Language (HTML) är standardmarkeringsspråk för dokument som är utformade för att visas i en webbläsare. Det kan stödjas av tekniker som Cascading Style Sheets (CSS) och skriptspråk som JavaScript.
     Webbläsare tar emot HTML-dokument från en webbserver eller från lokal lagring och ger dokumenten till multimediawebbsidor. HTML beskriver strukturen på en webbsida semantiskt och ursprungligen inkluderade ledtrådar för dokumentets utseende.
-    HTML-element är byggstenarna för HTML-sidor. Med HTML-konstruktioner kan bilder och andra objekt som interaktiva former inbäddas på den återgivna sidan. HTML ger ett sätt att skapa strukturerade dokument genom att beteckna strukturell semantik för text som rubriker, stycken, listor, länkar, citat och andra objekt. 
-    HTML-element avgränsas av taggar skrivna med vinkelparenteser. Taggar som <img /> och <input /> introducerar direkt innehåll på sidan. Andra taggar som <p> omger och ger information om dokumenttext och kan innehålla andra taggar som underelement. Webbläsare visar inte HTML-taggarna, men använder dem för att tolka sidans innehåll.</p> </center>
+   HTML-element är byggstenarna för HTML-sidor. Med HTML-konstruktioner kan bilder och andra objekt som interaktiva former inbäddas på den återgivna sidan. HTML ger ett sätt att skapa strukturerade dokument genom att beteckna strukturell semantik för text som rubriker, stycken, listor, länkar, citat och andra objekt. </p> </center>
 
 </body>
 </html>
