--- a/html.html
+++ b/html.html
@@ -52,7 +52,8 @@ li a:hover {
   <center> <h2> HTML </h2> </center>
   <center> <p> Hypertext Markup Language (HTML) är standardmarkeringsspråk för dokument som är utformade för att visas i en webbläsare. Det kan stödjas av tekniker som Cascading Style Sheets (CSS) och skriptspråk som JavaScript.
     Webbläsare tar emot HTML-dokument från en webbserver eller från lokal lagring och ger dokumenten till multimediawebbsidor. HTML beskriver strukturen på en webbsida semantiskt och ursprungligen inkluderade ledtrådar för dokumentets utseende.
-   HTML-element är byggstenarna för HTML-sidor. Med HTML-konstruktioner kan bilder och andra objekt som interaktiva former inbäddas på den återgivna sidan. HTML ger ett sätt att skapa strukturerade dokument genom att beteckna strukturell semantik för text som rubriker, stycken, listor, länkar, citat och andra objekt. </p> </center>
+   HTML-element är byggstenarna för HTML-sidor. Med HTML-konstruktioner kan bilder och andra objekt som interaktiva former inbäddas på den återgivna sidan. HTML ger ett sätt att skapa strukturerade dokument genom att beteckna strukturell semantik för text som rubriker, stycken, listor, länkar, citat och andra objekt. 
+    HTML kan bädda in program skrivna på ett skriptspråk som JavaScript, vilket påverkar beteende och innehåll på webbsidor. Inkludering av CSS definierar utseendet och utformningen av innehåll. World Wide Web Consortium (W3C), tidigare underhållare av HTML och nuvarande underhållare av CSS-standarderna, har uppmuntrat användningen av CSS över uttrycklig presentations-HTML sedan 1997. </p> </center>
 
 </body>
 </html>
