--- a/http.html
+++ b/http.html
@@ -49,6 +49,10 @@ li a:hover {
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
 </ul>
+  <center> <h2> HTTP </h2> </center>
+  <center> <p> Hypertext Transfer Protocol (HTTP) är ett applikationsprotokoll för distribuerade, samarbetsvilliga, hypermedia informationssystem. HTTP är grunden för datakommunikation för World Wide Web, där hypertextdokument innehåller hyperlänkar till andra resurser som användaren lätt kan komma åt, till exempel med ett musklick eller genom att knacka på skärmen i en webbläsare.
+Utveckling av HTTP initierades av Tim Berners-Lee vid CERN 1989. Utveckling av tidiga HTTP-begäranden om kommentarer (RFC) var en samordnad insats av Internet Engineering Task Force (IETF) och World Wide Web Consortium (W3C), med arbete senare flyttade till IETF.
+    HTTP / 1.1 dokumenterades först i RFC 2068 1997. Denna specifikation blev föråldrad av RFC 2616 1999, vilket också ersattes av RFC 7230-RFC-familjen 2014.</p> </center>
 
 </body>
 </html>
