--- a/webb.html
+++ b/webb.html
@@ -49,6 +49,8 @@ li a:hover {
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
 </ul>
+  <center> <h2> Webbläsare </h2> </center>
+  <center> <p> En webbläsare (ofta kallad en webbläsare) är en programapplikation för åtkomst till information på World Wide Web. När en användare begär en viss webbplats hämtar webbläsaren nödvändigt innehåll från en webbserver och visar sedan den resulterande webbsidan på användarens enhet. En webbläsare är inte samma sak som en sökmotor, även om de två ofta är förvirrade . För en användare är en sökmotor bara en webbplats, till exempel Google-sökning, Bing eller DuckDuckGo, som lagrar sökbar information om andra webbplatser. Men för att ansluta till en webbplatsserver och visa sina webbsidor måste en användare ha en webbläsare installerad. I mars 2019 använder mer än 4,3 miljarder människor en webbläsare, vilket är cirka 55% av världens befolkning. De tre mest populära webbläsarna är Chrome, Firefox och Safari. </p> </center>
 
 </body>
 </html>
