--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ li a:hover {
   <li><a href="webb.html">Webbläsare</a></li>
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
+  <li><a href="xml.html">XML</a></li>
 </ul>
   <center> <h2> Här du kan hitta information om Arpanet, FTP, Telnet, SMTP, HTML, HTTP, Webbläsare, CSS och XML </h2> </center>
 
