--- a/css.html
+++ b/css.html
@@ -49,6 +49,7 @@ li a:hover {
   <li><a href="webb.html">Webbläsare</a></li>
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
+  <li><a href="sam.html">Samhällspåverkan</a></li>
 </ul>
   <center> <h2> CSS </h2> </center>
   <center> <p> CSS som är förkortningen för Cascading Style Sheets är ett stilarkspråk som används för att beskriva presentationen av ett dokument skrivet på ett markeringsspråk som HTML. CSS är en hörnstensteknologi på World Wide Web, tillsammans med HTML och JavaScript.CSS är utformad för att möjliggöra separering av presentation och innehåll, inklusive layout, färger och teckensnitt. Denna separering kan förbättra innehållets tillgänglighet, ge mer flexibilitet och kontroll i specifikationen av presentationsegenskaper, möjliggöra för flera webbsidor att dela formatering genom att specificera relevant CSS i en separat .css-fil och minska komplexiteten och upprepningen i det strukturella innehållet. </p> </center>
