--- a/ftp.html
+++ b/ftp.html
@@ -48,6 +48,7 @@ li a:hover {
   <li><a href="webb.html">Webbläsare</a></li>
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
+  <li><a href="sam.html">Samhällspåverkan</a></li>
 </ul>
   <center> <h2> FTP </h2> </center>
   <center> <p> Den originala FTP var skriven av Abhay Bhushan och publicerades som RFC 114 den 16 april 1971. Fram till 1980 körde FTP på NCP, föregångaren till TCP/IP. Protokollet ersattes senare av en TCP/IP-version, RFC 765 (Juni 1980) och RFC 959 (Oktober 1985), den aktuella specifikationen.
