--- a/html.html
+++ b/html.html
@@ -48,6 +48,7 @@ li a:hover {
   <li><a href="webb.html">Webbläsare</a></li>
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
+  <li><a href="sam.html">Samhällspåverkan</a></li>
 </ul>
   <center> <h2> HTML </h2> </center>
   <center> <p> Hypertext Markup Language (HTML) är standardmarkeringsspråk för dokument som är utformade för att visas i en webbläsare. Det kan stödjas av tekniker som Cascading Style Sheets (CSS) och skriptspråk som JavaScript.
