--- a/http.html
+++ b/http.html
@@ -48,6 +48,7 @@ li a:hover {
   <li><a href="webb.html">Webbläsare</a></li>
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
+  <li><a href="sam.html">Samhällspåverkan</a></li>
 </ul>
   <center> <h2> HTTP </h2> </center>
   <center> <p> Hypertext Transfer Protocol (HTTP) är ett applikationsprotokoll för distribuerade, samarbetsvilliga, hypermedia informationssystem. HTTP är grunden för datakommunikation för World Wide Web, där hypertextdokument innehåller hyperlänkar till andra resurser som användaren lätt kan komma åt, till exempel med ett musklick eller genom att knacka på skärmen i en webbläsare.
