--- a/smtp.html
+++ b/smtp.html
@@ -48,6 +48,7 @@ li a:hover {
   <li><a href="webb.html">Webbläsare</a></li>
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
+  <li><a href="sam.html">Samhällspåverkan</a></li>
 </ul>
   <center> <h2> SMTP </h2> </center>
   <center> <p> SMTP som är färkortat från Simple Mail Transfer Protocol är ett kommunikationsprotokoll för överföring av elektronisk post. SMTP definerades som Internet standatd först i 1982 av RFC 821 och uppdaterades år 2008 av RFC 5321 till utökade SMTP tillägg, vilket är protokollsorten i utbredd användning idag.
