--- a/telnet.html
+++ b/telnet.html
@@ -48,6 +48,7 @@ li a:hover {
   <li><a href="webb.html">Webbläsare</a></li>
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
+  <li><a href="sam.html">Samhällspåverkan</a></li>
 </ul>
   <center> <h2> Telnet </h2> </center>
   <center> <p> Telnet är ett applikationsprotokoll som används på internet eller kolakt nätverk. Den är använd för att tillhandahålla en dubbeöriktad interaktiv terminalanslutning. Användardata är isär ett band med Telnet kontrollinformation i en 8 bitars orienterad dataförbindelse över TCP.
