--- a/xml.html
+++ b/xml.html
@@ -48,6 +48,7 @@ li a:hover {
   <li><a href="webb.html">Webbläsare</a></li>
   <li><a href="css.html">CSS</a></li>
   <li><a href="xml.html">XML</a></li>
+  <li><a href="sam.html">Samhällspåverkan</a></li>
 </ul>
   <center> <h2> XML </h2> </center>
   <center> <p> Extensible Markup Language (XML) är ett markeringsspråk (datautbytesformat) som definierar en uppsättning regler för kodning av dokument i ett format som är både mänskligt läsbart och maskinläsbart. World Wide Web Consortiums XML 1.0-specifikation från 1998 och flera andra relaterade specifikationer, alla av dem med öppna standarder, definierar XML. XML-designmålen betonar enkelhet, allmänhet och användbarhet på Internet. Det är ett textdataformat med starkt stöd via Unicode för olika mänskliga språk. Även om utformningen av XML fokuserar på dokument, används språket i stor utsträckning för att representera godtyckliga datastrukturer som de som används i webbtjänster. Det finns flera schemasystem för att hjälpa till att definiera XML-baserade språk, medan programmerare har utvecklat många applikationer programmeringsgränssnitt (API: er) för att underlätta behandlingen av XML-data. </p> </center>
