--- a/sam.html
+++ b/sam.html
@@ -52,7 +52,7 @@ li a:hover {
   <li><a href="sam.html">Samhällspåverkan</a></li>
 </ul>
   <center> <h2> Samhällspåverkan </h2> </center>
-  <h4> E-Handel </h4>
+  <center> <h4> E-Handel </h4> </center>
   <center> <p>  </p> </center>
 
 </body>
