--- a/sam.html
+++ b/sam.html
@@ -53,7 +53,10 @@ li a:hover {
 </ul>
   <center> <h2> Samhällspåverkan </h2> </center>
   <center> <h4> E-Handel </h4> </center>
-  <center> <p>  </p> </center>
+  <center> <p> När allt E-Handel påbörjade alla började köpa allt från nätet. Amazon är idags mäst populera webbsida om någon will köpa någonting från webbet och jag kan inte se en annan webbsida ta över Amazon.
+  Men det är ju inte bra för alla butiker för att om alla handlar på nätet då ingen komma köpa från butiken. Och mindre och mindre personer ska ut på gatan för att de ska direkt hem efter jobber och handla på nätet.
+  I frantiden tror jag att mer och mer personer kommer handla bara i nätet och det är inte bara kläder. Medicin, mat, elektroniker och datorer och många mer saker kommer säljar genom internet. Det är redan så många butiker
+    som säljer bara genom internet och jag tror att mer och mer småa butiker kommer stängas för att de ska inte ha klienter och förlora alla pengar de har haft.</p> </center>
 
 </body>
 </html>
