--- a/sam.html
+++ b/sam.html
@@ -57,6 +57,9 @@ li a:hover {
   Men det är ju inte bra för alla butiker för att om alla handlar på nätet då ingen komma köpa från butiken. Och mindre och mindre personer ska ut på gatan för att de ska direkt hem efter jobber och handla på nätet.
   I frantiden tror jag att mer och mer personer kommer handla bara i nätet och det är inte bara kläder. Medicin, mat, elektroniker och datorer och många mer saker kommer säljar genom internet. Det är redan så många butiker
     som säljer bara genom internet och jag tror att mer och mer småa butiker kommer stängas för att de ska inte ha klienter och förlora alla pengar de har haft.</p> </center>
+  <center> <h4> Dataspel </h4> </center>
+  <center> <p>  </center> </p>
+  
 
 </body>
 </html>
