--- a/sam.html
+++ b/sam.html
@@ -57,8 +57,11 @@ li a:hover {
   Men det är ju inte bra för alla butiker för att om alla handlar på nätet då ingen komma köpa från butiken. Och mindre och mindre personer ska ut på gatan för att de ska direkt hem efter jobber och handla på nätet.
   I frantiden tror jag att mer och mer personer kommer handla bara i nätet och det är inte bara kläder. Medicin, mat, elektroniker och datorer och många mer saker kommer säljar genom internet. Det är redan så många butiker
     som säljer bara genom internet och jag tror att mer och mer småa butiker kommer stängas för att de ska inte ha klienter och förlora alla pengar de har haft.</p> </center>
+ 
   <center> <h4> Dataspel </h4> </center>
-  <center> <p>  </center> </p>
+  <center> <p> Dataspel blir mer populär med varje dag och alla vet det. Alla föräldrar är oroliga för barnen för att de spelar för mycket dataspel och går inte ut, gör inte läxor och sover sent på natten. Jag tror inte att dataspel är farligt alls för oss människorna,
+  det finns ju många personer som slappnar av att spela dataspel när de hade en stressig dag eller skolan är för mycket. Men även jag tror att det måste finnas en gräns på det. Man ska göra en planering när man ska studera, spela, gå ut och göra en bra sömn schema.
+  Jag ser inte så många barn som är ute och lekar eller spelar fotboll längre, när jag var 10-15 år gammal vi gick ut kl 10 på morgonen och tillbaka hem 17:00 och vi lekte hela dagen. Men nu alla barn är hemma och spelar dataspel.</p> </center>
   
 
 </body>
